# labanane

./: .gitignore  CLAUDE.md  docker-compose.yml  integration_guide_scraperAPI.md  prd.md  run.sh
backend/: .dockerignore  .env.example  Dockerfile  pyproject.toml  pytest.ini  test_api_client.py  test_pipeline_minimal.py
backend/src/: config.py  database.py  main.py  models.py  schemas.py  scraper.py  store.py
backend/src/logic/: analysis.py  export.py  persona.py  scraper.py  trends.py
backend/src/models/: report.py  workflow_models.py
backend/src/routes/: export.py  workflow.py
backend/src/tests/: conftest.py  test_engine.py  test_export_endpoints.py  test_workflow_run.py  test_ws_contract.py  test_ws_happy_path.py  test_ws_keyword_loop.py  test_ws_product_loop.py
backend/src/tests/logic/: test_analysis.py  test_export.py  test_persona.py  test_scraper.py  test_trends.py
backend/src/tests/python/openhosta/: extracted_products.json  page_01.html
backend/src/tests/scraper/: dump_html.py
backend/src/tests/steps/: test_step_s01.py  test_step_s02.py  test_step_s03.py  test_step_s04.py  test_step_s05.py  test_step_s06.py  test_step_s07.py  test_step_s08.py  test_step_s09.py
backend/src/workflow/: engine.py  messages.py  registry.py  run.py  step_base.py
backend/src/workflow/steps/: s01_description.py  s02_keyword_refinement.py  s03_keyword_confirmation.py  s04_product_research.py  s05_product_validation.py  s06_market_research.py  s07_ai_analysis.py  s08_final_criteria.py  s08_persona_generation.py  s09_report.py  s10_report.py
flo-brainsto/: .gitignore
(+138 files in other folders)
